--- a/GRANDEURIG.html
+++ b/GRANDEURIG.html
@@ -8,7 +8,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR" rel="stylesheet"> <!--폰트 사용-->
 		<!-- kakaolink javascript-->
 		<script src="assets/js/kakao.min.js"></script>
-		
+
 <!--부 제목 만들기 위한 공간 -->
 <style>
 #Subtitle{
@@ -182,7 +182,7 @@ a:link {
 
 								<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; 웹 프레임 워크 2조 송창범, 진승오</a>.</p>
+									<p class="copyright">&copy; 송창범</a></p>
 									<div class="panel-body">
 									<a id="kakao-link-btn" href="javascript:sendLink()">
 									<img src="images/kakaolink_btn_medium.png"/>
@@ -206,7 +206,7 @@ a:link {
 			    	objectType: 'feed',
 			    	content: {
 			    	  title: 'Web Framework',
-			    	  description: '#kakao #ai #2조 #송창범 #진승오',
+			    	  description: '#kakao #ai #송창범',
 			    	  imageUrl: '',
 			    	  link: {
 			    		mobileWebUrl: 'http://211.207.68.165/WebF/index.html',
