--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ a:link
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; 웹 프레임 워크 2조 송창범, 진승오</a>.</p>
+									<p class="copyright">&copy; 송창범</a></p>
 									<div class="panel-body">
 									<a id="kakao-link-btn" href="javascript:sendLink()">
 									<img src="images/kakaolink_btn_medium.png"/>
@@ -326,7 +326,7 @@ a:link
 		    	objectType: 'feed',
 		    	content: {
 		    	  title: 'Web Framework',
-		    	  description: '#kakao #ai #2조 #송창범 #진승오',
+		    	  description: '#kakao #ai #송창범',
 		    	  imageUrl: '',
 		    	  link: {
 		    		mobileWebUrl: 'http://211.207.68.165/WebF/index.html',
