--- a/kakaomini.html
+++ b/kakaomini.html
@@ -16,10 +16,6 @@
 		#Subtitle {
 			margin-bottom: -20px;
 		}
-		a:link
-		{
-		 color: white; text-decoration: none;
-		}
 	</style>
 </head>
 <body class="is-preload">
@@ -201,7 +197,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; 웹 프레임 워크 2조 송창범, 진승오</a>.</p>
+						<p class="copyright">&copy; 송창범</a></p>
 						<div class="panel-body">
 						<a id="kakao-link-btn" href="javascript:sendLink()">
 						<img src="images/kakaolink_btn_medium.png"/>
@@ -224,7 +220,7 @@
 				objectType: 'feed',
 				content: {
 					title: 'Web Framework',
-					description: '#kakao #ai #2조 #송창범 #진승오',
+					description: '#kakao #ai #송창범',
 					imageUrl: '',
 					link: {
 					mobileWebUrl: 'http://211.207.68.165/WebF/index.html',
